# chorale

./: README.md  chorale.cabal
src/Chorale/: Common.hs
tests/: Test.hs
tests/Chorale/: Test.hs
tests/Chorale/Test/: Common.hs
