name: chorale
version: 0.1.0
author: Franz-Benjamin Mocnik <mail@mocnik-science.net>
maintainer: Franz-Benjamin Mocnik <mail@mocnik-science.net>
copyright: (c) by Franz-Benjamin Mocnik, 2013-2016
license: MIT
homepage: http://github.com/mocnik-science/chorale
cabal-version: >= 1.20
build-type: Simple
extra-source-files:
  README.md

library
  exposed-modules:
    Chorale.Common
  hs-source-dirs:src/
  default-language: Haskell2010
  ghc-options:
    -Wall
    -O2
  build-depends:
    base,
    containers,
    safe,
    text
